# nijisanji-voice--organize

./: Makefile  README.md  config.yaml  organize.py  pyproject.toml  refresh.sh  search.py
data/: liver_infomation.csv  livers.json
